--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -14,7 +14,7 @@
                                 <span class="user-info-image" [ngStyle]="{'margin-left': '15px'}">Chọn ảnh cho nhân viên</span>
                             </label>
                             <input id="file-input" type="file" (change)="getFiles($event)">
-                            <button class="btn btn-primary" (click)="uploadImage()" *ngIf="selectedFile != null">Update</button>
+                            <!-- <button class="btn btn-primary" (click)="uploadImage()" *ngIf="selectedFile != null">Update</button> -->
                         </div> 
 
                         <div class="text-center">
