--- a/src/app/client/profiles/price-list/price-list.component.html
+++ b/src/app/client/profiles/price-list/price-list.component.html
@@ -4,15 +4,15 @@
 <app-sidebar></app-sidebar>
     <div class="body">
         <div style="max-width: 806px; margin: 0 auto;">
-            <h1>Giới thiệu PhongTro.com</h1>
+            <h1>Giới thiệu PhongTroThanhXuan.com</h1>
             <p>Phongtro123.com tự hào là trang web đứng top đầu google về từ khóa: cho thuê phòng trọ, thuê phòng trọ, phòng trọ hồ chí minh, phòng trọ hà nội, thuê nhà nguyên căn, cho thuê căn hộ, tìm người ở ghép…với lưu lượng truy cập (traffic) cao nhất trong
                 lĩnh vực.</p>
-            <p>Phongtro123.com tự hào có lượng dữ liệu bài đăng lớn nhất trong lĩnh vực cho thuê phòng trọ với hơn 70.000 tin trên hệ thống và tiếp tục tăng.</p>
-            <p>Phongtro123.com tự hào có số lượng người dùng lớn nhất trong lĩnh vực cho thuê phòng trọ với hơn 300.000 khách truy cập và hơn 2.000.000 lượt pageview mỗi tháng.</p>
+            <p>PhongtroThanhXuan.com tự hào có lượng dữ liệu bài đăng lớn nhất trong lĩnh vực cho thuê phòng trọ với hơn 70.000 tin trên hệ thống và tiếp tục tăng.</p>
+            <p>PhongtroThanhXuan.com tự hào có số lượng người dùng lớn nhất trong lĩnh vực cho thuê phòng trọ với hơn 300.000 khách truy cập và hơn 2.000.000 lượt pageview mỗi tháng.</p>
             <p></p>
             <!-- <center><img src="./Bảng giá đăng tin trên web site PhongTro123.com_files/demo_google.png" width="600"></center> -->
             <p></p><br><br>
-            <h1>Bảng giá đăng tin trên web site PhongTro123.com</h1>
+            <h1>Bảng giá đăng tin trên web site PhongtroThanhXuan.com</h1>
             <table>
                 <thead>
                     <tr>
