--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -13,14 +13,14 @@
             <section class="section section-top-location">
                 <div class="section-header"><span class="section-title small">Khu vực nổi bật</span></div>
                 <div class="location-city clearfix"><a class="location-item city-1"
-                        href="https://phongtro123.com/tinh-thanh/ho-chi-minh" title="Cho thuê phòng trọ Hồ Chí Minh">
+                        href="https://PhongTroThanhXuan.com/tinh-thanh/ho-chi-minh" title="Cho thuê phòng trọ Hồ Chí Minh">
                         <div class="location-bg"></div><span class="location-cat">Phòng trọ <span
                                 class="location-name">Hồ Chí Minh</span></span>
-                    </a><a class="location-item city-2" href="https://phongtro123.com/tinh-thanh/ha-noi"
+                    </a><a class="location-item city-2" href="https://PhongTroThanhXuan.com/tinh-thanh/ha-noi"
                         title="Cho thuê phòng trọ Hà Nội">
                         <div class="location-bg"></div><span class="location-cat">Phòng trọ <span
                                 class="location-name">Hà Nội</span></span>
-                    </a><a class="location-item city-4" href="https://phongtro123.com/tinh-thanh/da-nang"
+                    </a><a class="location-item city-4" href="https://PhongTroThanhXuan.com/tinh-thanh/da-nang"
                         title="Cho thuê phòng trọ Đà Nẵng">
                         <div class="location-bg"></div><span class="location-cat">Phòng trọ <span
                                 class="location-name">Đà Nẵng</span></span>
@@ -131,38 +131,38 @@
             <section class="section">
                 <div class="bottom-links clearfix">
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/cho-thue-phong-tro"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                                 title="Cho thuê phòng trọ, nhà trọ"><strong>Cho thuê phòng trọ</strong></a>
                         </h3>
                         <ul>
-                            <li><a href="https://phongtro123.com/tinh-thanh/ha-noi"
+                            <li><a href="https://PhongTroThanhXuan.com/tinh-thanh/ha-noi"
                                     title="Cho thuê phòng trọ, nhà trọ tại Hà Nội">Cho thuê phòng trọ Hà Nội</a></li>
                         </ul>
                     </div>
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/nha-cho-thue"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/nha-cho-thue"
                                 title="Cho thuê nhà nguyên căn"><strong>Cho thuê nhà nguyên căn</strong></a></h3>
                         <ul>
                             <li><a title="Cho thuê nhà nguyên căn tại Hà Nội"
-                                    href="https://phongtro123.com/cho-thue-nha-nguyen-can-ha-noi">Cho thuê nhà Hà
+                                    href="https://PhongTroThanhXuan.com/cho-thue-nha-nguyen-can-ha-noi">Cho thuê nhà Hà
                                     Nội</a></li>
                         </ul>
                     </div>
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/cho-thue-can-ho"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/cho-thue-can-ho"
                                 title="Cho thuê căn hộ chung cư"><strong>Cho thuê căn hộ</strong></a></h3>
                         <ul>
                             <li><a title="Cho thuê căn hộ chung cư tại Hà Nội"
-                                    href="https://phongtro123.com/cho-thue-can-ho-chung-cu-ha-noi">Cho thuê căn hộ Hà
+                                    href="https://PhongTroThanhXuan.com/cho-thue-can-ho-chung-cu-ha-noi">Cho thuê căn hộ Hà
                                     Nội</a></li>
                         </ul>
                     </div>
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/tim-nguoi-o-ghep"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep"
                                 title="Tìm người ở ghép"><strong>Tìm người ở ghép</strong></a></h3>
                         <ul>
                             <li><a title="Tìm người ở ghép tại Hà Nội"
-                                    href="https://phongtro123.com/tim-nguoi-o-ghep-ha-noi">Tìm người ở ghép Hà Nội</a>
+                                    href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep-ha-noi">Tìm người ở ghép Hà Nội</a>
                             </li>
                         </ul>
                     </div>
@@ -172,15 +172,11 @@
                 <div class="section-content">
                     <h3>Tại sao lại chọn PhongTroThanhXuan.com?</h3>
                     <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongtroThanhXuan.com tự hào là trang web đứng top
-                        google về các từ khóa: <a href="https://phongtro123.com/cho-thue-phong-tro"
+                        google về các từ khóa: <a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                             title="Cho thuê phòng trọ"><strong>cho thuê phòng trọ</strong></a>, <strong>nhà
-                            trọ</strong>, <a href="https://phongtro123.com/nha-cho-thue"
-                            title="Cho thuê nhà nguyên căn"><strong>thuê nhà nguyên căn</strong></a>, <a
-                            href="https://phongtro123.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho thuê căn
-                                hộ</strong></a>, <a href="https://phongtro123.com/tim-nguoi-o-ghep"
-                            title="Tìm người ở ghép"><strong>tìm người ở ghép</strong></a>, <a
-                            href="https://phongtro123.com/cho-thue-mat-bang" title="Cho thuê mặt bằng"><strong>cho thuê
-                                mặt bằng</strong></a>...Vì vậy tin của bạn đăng trên website sẽ tiếp cận được với nhiều
+                            trọ</strong>, <a href="http://localhost:4200/rent-room"
+                            title="Cho thuê nhà nguyên căn"></a><strong>tìm người ở ghép</strong>, <a
+                            href="http://localhost:4200/room-mates" title="Cho thuê mặt bằng"></a>...Vì vậy tin của bạn đăng trên website sẽ tiếp cận được với nhiều
                         khách hàng hơn, do đó giao dịch nhanh hơn, tiết kiệm chi phí hơn</p>
                     <div class="whyus-countup clearfix">
                         <div class="whyus-countup-item"><span class="whyus-countup-item-number">70.000+</span><span
@@ -200,15 +196,15 @@
                         <span class="fa fa-star checked" style=" color: orange;"></span>
                         <span class="fa fa-star checked" style=" color: orange;"></span>
                     </div>
-                    <p class="testimonial">Trước khi biết website phongtro123, mình phải tốn nhiều công sức và chi phí
+                    <p class="testimonial">Trước khi biết website PhongTroThanhXuan, mình phải tốn nhiều công sức và chi phí
                         cho việc đăng tin cho thuê: từ việc phát tờ rơi, dán giấy, và đăng lên các website khác nhưng
-                        hiệu quả không cao. Từ khi biết website phongtro123.com, mình đã thử đăng tin lên và đánh giá
+                        hiệu quả không cao. Từ khi biết website PhongTroThanhXuan.com, mình đã thử đăng tin lên và đánh giá
                         hiệu quả khá cao trong khi chi phí khá thấp, không còn tình trạng phòng trống kéo dài - Anh
                         Khánh (chủ hệ thống phòng trọ tại Tp.HCM)</p>
                     <h3>Bạn đang có phòng trọ / căn hộ cho thuê?</h3>
                     <p>Không phải lo tìm người cho thuê, phòng trống kéo dài</p><a class="btn red"
                         style="padding: 10px 30px;" rel="nofollow"
-                        href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin ngay</a>
+                        href="http://localhost:4200/profile/create-article">Đăng tin ngay</a>
                 </div>
             </section>
             <section class="section section-support">
@@ -224,9 +220,11 @@
                                 target="_blank" href="https://zalo.me/0902657123">Zalo: 0902657123</a></div>
                         <div class="support-item"><span class="support-item-title">Hotline 24/7</span><a rel="nofollow"
                                 href="tel:0917686101">Điện thoại: 0917686101</a><a rel="nofollow" target="_blank"
-                                href="https://zalo.me/0917686101">Zalo: 0917686101</a></div><a
-                            class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên
-                            hệ</a>
+                                href="https://zalo.me/0917686101">Zalo: 0917686101</a>
+                            </div>
+                            <!-- <a
+                            class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên
+                            hệ</a> -->
                     </div>
                 </div>
             </section>
@@ -236,7 +234,7 @@
             <a target="_blank" href="https://bds123.vn/"><img src="https://phongtro123.com/images/bds123_120_300.gif"></a>
         </div>
         <div id="fixed_Right" class="banner_fixed" style="display: block; right: 39.5px;">
-            <a target="_blank"  rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook">
+            <a target="_blank"  rel="nofollow" href="https://www.facebook.com/Ph%C3%B2ng-tr%E1%BB%8D-Thanh-Xu%C3%A2n-D%E1%BB%B1-%C3%A1n-TN-102182135319026">
                 <img  src="https://phongtro123.com/images/ad_nhom_fb.jpg"></a>
         </div>
     </div>
