--- a/src/app/client/clients-page/shared/footer/footer.component.html
+++ b/src/app/client/clients-page/shared/footer/footer.component.html
@@ -26,12 +26,11 @@
                         </div>
                         <div class="footer-col"><span class="footer-col-title">Phòng Trọ Thanh Xuân</span>
                             <ul class="footer-menu">
-                                <li><a href="https://PhongTroThanhXuan.com/">Trang chủ</a></li>
-                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/gioi-thieu">Giới thiệu</a></li>
-                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/blog.html">Blog</a></li>
-                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/chinh-sach-bao-mat">Chính sách bảo
-                                        mật</a></li>
-                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Liên hệ</a></li>
+                                <li><a href="http://localhost:4200/">Trang chủ</a></li>
+                                <li><a rel="nofollow" href="http://localhost:4200/tutorial">Hướng dẫn</a></li>
+                                <li><a rel="nofollow" href="http://localhost:4200/blog">Blog</a></li>
+                                <li><a rel="nofollow" href="http://localhost:4200/profile/price-list">Bảng giá</a></li>
+                                <!-- <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Liên hệ</a></li> -->
                             </ul>
                         </div>
                         <div class="footer-col"><span class="footer-col-title">Hỗ trợ khách hàng</span>
